--- a/extensions/chrome/popup.html
+++ b/extensions/chrome/popup.html
@@ -1,60 +1,27 @@
 <html>
-  <head>
-    <script src="a.js"></script>
-    <title>Quantum Text Editor</title>
+<head>
+  <!-- Bootstrap core CSS -->
+  <link href="assets/bootstrap/bootstrap-3.3.7/css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Bootstrap core CSS -->
-    <link href="assets/bootstrap/bootstrap-3.3.7/css/bootstrap.min.css" rel="stylesheet">
+	<style type="text/css">
+	body {width:260; height:400;}
+	</style>
+</head>
+<body>
 
-    <!-- Custom CSS -->
-    <link href="common/css/quantum-core.css" rel="stylesheet">
-
-  </head>
-  <body>
-    <div class="popup">
-
-      <div class="container-fluid">
-        <div class="row">
-          <div class="col-sm-3 col-md-2 sidebar">
-            <ul class="nav nav-sidebar">
-              <li class="active"><a href="#">Text Editor <span class="sr-only">(current)</span></a></li>
-              <li><a href="#">My Texts</a></li>
-              <li><a href="#">My Corpora</a></li>
-            </ul>
-          </div>
-
-          <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-
-
-              <div class="main-scroller">
-                <div class="content-wrap">
-                  <div class="textarea-container" id="editor">
-                      <div class="textarea-wrap">
-                        <!--vue-if-->
-                        <!--vue-if-->
-                        <div class="quantum-text-editor" eqa_id="textfield" contenteditable="" id="textarea" spellcheck="false" style="white-space: normal;">Hello world</div><!--vue-if-->
-                      </div>
-                  </div>
-                </div>
-              </div>
-
-
-          </div>
-        </div>
+  <div class="row">
+    <div class="col-sm-6 col-md-4">
+      <div class="thumbnail">
+        <img src="common/images/logo_chrome.png" alt="...">
+        <hr>
+        <h5>My current parameters and settings ...</h5>
+        <hr>
+        <h5>Information about last updates ...</h5>
+        <hr>
+        <p><a href="#" class="btn btn-primary" role="button">Get Premium</a></p>
       </div>
     </div>
+  </div>
 
-
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
-    <script src="assets/bootstrap/bootstrap-3.3.7/js/bootstrap.min.js"></script>
-    <!-- Just to make our placeholder images work. Don't actually copy the next line! -->
-    <script src="../../assets/js/vendor/holder.min.js"></script>
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
-
-  </body>
+</body>
 </html>
