Popup help list window added

--- a/extensions/chrome/common/packages/texteditor/texteditor.html
+++ b/extensions/chrome/common/packages/texteditor/texteditor.html
@@ -16,8 +16,9 @@
 				<h4 class="quantum-text-editor-title">Quantum Text Editor</h4>
 			</div>
 
-			<textarea class="quantum-text-area">Some text in the modal.</textarea>
+			<textarea id="quantum-text-area" class="quantum-text-area">Hello world </textarea>
 
+			<div id='quantum-text-help-list' class='quantum-text-help-list' style="display:none;"></div>
 				<!-- Modal content-->
 
 						<div class="quantum-text-editor-footer">
@@ -34,6 +35,7 @@
 
 	<script src="../../../assets/jquery/jquery-3.1.1/jquery-3.1.1.min.js"></script>
 	<script src="texteditor.js"></script>
+	<script src="keytrap.js"></script>
 
   </body>
 </html>
