--- a/extensions/chrome/common/packages/texteditor/texteditor.html
+++ b/extensions/chrome/common/packages/texteditor/texteditor.html
@@ -35,6 +35,7 @@
 
 	<script src="../../../assets/jquery/jquery-3.1.1/jquery-3.1.1.min.js"></script>
 	<script src="texteditor.js"></script>
+	<script src="predictor.js"></script>
 	<script src="keytrap.js"></script>
 
   </body>
