Save, Open button added

--- a/extensions/chrome/common/packages/texteditor/texteditor.html
+++ b/extensions/chrome/common/packages/texteditor/texteditor.html
@@ -26,8 +26,8 @@
 						<div class="btn-group quantum-text-editor-btn-group" role="group">
 							<div class="quantum-text-editor-btn-language-dropdown">
 								<button type="button" class="quantum-text-editor-btn quantum-text-editor-btn-language"><span class="glyphicon quantum-text-editor-icon-language"></span>EN</button>
-								<div class="quantum-text-editor-btn-language-popup" style="display:none;">
-									<div class="quantum-text-editor-btn-language-popup-body">
+								<div class="quantum-text-editor-btn-popup quantum-text-editor-btn-language-popup" style="display:none;">
+									<div class="quantum-text-editor-btn-popup-body">
 										<h2>Language Selector</h2>
 										<p>This functionality available only for Premium User.</p>
 										<button type="button" class="quantum-text-editor-submit-btn">Update to Premium</button>
@@ -35,26 +35,39 @@
 								</div>
 							</div>
 						</div>
-						<div class="btn-group" role="group">
+						<div class="btn-group quantum-text-editor-btn-group" role="group">
 							<div class="quantum-text-editor-btn-dictionary-dropdown">
 								<button type="button" class="quantum-text-editor-btn quantum-text-editor-btn-dictionary"><span class="glyphicon quantum-text-editor-icon-dictionary"></span>English (Universal)</button>
-								<div class="quantum-text-editor-btn-dictionary-popup" style="display:none;">
-									<div class="quantum-text-editor-btn-dictionary-popup-body">
+								<div class="quantum-text-editor-btn-popup quantum-text-editor-btn-dictionary-popup" style="display:none;">
+									<div class="quantum-text-editor-btn-popup-body">
 										<h2>Dictionary Selector</h2>
 										<p>This functionality available only for Premium User.</p>
 										<button type="button" class="quantum-text-editor-submit-btn">Update to Premium</button>
 									</div>
 								</div>
 							</div>
-
-						</div>
-						<!--div class="btn-group quantum-text-editor-btn-group" role="group">
-							<button type="button" class="quantum-text-editor-btn">Save Draft</button>
-							<button type="button" class="quantum-text-editor-btn">Open Draft</button>
 						</div>
 						<div class="btn-group" role="group">
-							<button type="button" class="quantum-text-editor-btn">Templates</button>
-						</div-->
+							<div class="quantum-text-editor-btn-save-dropdown">
+								<button type="button" class="quantum-text-editor-btn quantum-text-editor-btn-save"><span class="glyphicon quantum-text-editor-icon-save"></span>Save</button>
+								<div class="quantum-text-editor-btn-popup quantum-text-editor-btn-save-popup" style="display:none;">
+									<div class="quantum-text-editor-btn-popup-body">
+										<p>Save</p>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="btn-group" role="group">
+							<div class="quantum-text-editor-btn-open-dropdown">
+								<button type="button" class="quantum-text-editor-btn quantum-text-editor-btn-open"><span class="glyphicon quantum-text-editor-icon-open"></span>Open</button>
+								<div class="quantum-text-editor-btn-popup quantum-text-editor-btn-open-popup" style="display:none;">
+									<div class="quantum-text-editor-btn-popup-body">
+										<p>Open</p>
+									</div>
+								</div>
+							</div>
+						</div>						
+
 						<div class="btn-group quantum-text-editor-right-btn-group" role="group">
 							<button type="button" class="quantum-text-editor-submit-btn">Submit</button>
 						</div>
